--- a/style.css
+++ b/style.css
@@ -34,3 +34,37 @@ body {
 .navbar li a:active {
     color:#0f0671;
 }
+.entery {
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+}
+.title h2 {
+    font-size:4rem;
+    position:relative;
+    left:70px;
+    top:50px;
+}
+.btm {
+    font-size:20px;
+    width:160px;
+    height:40px;
+    position:relative;
+    top:10px;
+    left:100px;
+    background-color:#fe7062;
+}
+.inter {
+    position:relative;
+    top:100px;
+    right:-10px;
+}
+.scroll {
+    position: relative;
+    top:200px;
+    left:45%;
+    font-size:20px;
+    text-decoration:none;
+}
+.scroll:active {
+    color:#fe7062
+}
